--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.5",
     "striptags": "^3.2.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.0",
